# QT-Custom-CMake-Wizards

./: README.md
class/: wizard.json
cmakeclasswithgtest/: file.h  test.h  wizard.json
cmakecppconsole/: CMakeLists.txt  CMake_Management.txt  appname.cpp  appname.h  main.cpp  pch.h  run.h  version.cpp  version.h  wizard.json
cmakecppconsole/licenses/: mit.txt
cmakegtestcppconsole/: CMakeLists.txt  CMake_Management.txt  CMake_Test.txt  appname.cpp  appname.h  config.h.in  main.cpp  pch.cpp  pch.h  run.cpp  run.h  runtests.h  test.h  test_main.cpp  version.cpp  version.h  wizard.json
cmakegtestcppconsole/licenses/: own_license.txt
customclass/: file.cpp  wizard.json
project/: CMakeLists.txt  CMake_Management.txt  appname.h  main.cpp  pch.cpp  wizard.json
project/wizard_licenses/: cmake_license.txt
